Add API for statisctiv
