# server/src/HWMonitoring/models/statistic.py
@@ -10,6 +10,7 @@ from typing import List, Dict  # noqa: F401
 from HWMonitoring.models.base_model_ import Model
 from HWMonitoring import util
 
+unique_id = 0
 
 class Statistic(Model, db.Model):
     """NOTE: This class is auto generated by the swagger code generator program.
@@ -20,52 +21,32 @@ class Statistic(Model, db.Model):
     __tablename__ = "statistic"
 
     id_ = db.Column(db.Integer, primary_key=True)
-    machine_id = db.relationship("machine_id", secondary="machines", backref="id")
-    process = db.Column(db.Integer)
-    cpu_load = db.Column(db.Integer)
-    memory_load = db.Column(db.Integer)
-    timestamp = db.Column(db.DateTime)
+    machine_id_ = db.Column(db.Integer, db.ForeignKey("machines.id_"))
+    #machine_id_r = db.relationship("machine_id_", secondary="machines", backref="id")
+    process_ = db.Column(db.Integer)
+    cpu_load_ = db.Column(db.Integer)
+    memory_load_ = db.Column(db.Integer)
+    timestamp_ = db.Column(db.Integer)
 
-    def __init__(self, id: int=None, machine_id: int=None, process: int=None, cpu_load: int=None, memory_load: int=None, timestamp: datetime=None):  # noqa: E501
-        """Statistic - a model defined in Swagger
+    def __init__(self, **kwargs):
+        global unique_id
+        unique_id += 1
+        kwargs['id_'] = unique_id
+        super(Statistic, self).__init__(**kwargs)
 
-        :param id: The id of this Statistic.  # noqa: E501
-        :type id: int
-        :param machine_id: The machine_id of this Statistic.  # noqa: E501
-        :type machine_id: int
-        :param process: The process of this Statistic.  # noqa: E501
-        :type process: int
-        :param cpu_load: The cpu_load of this Statistic.  # noqa: E501
-        :type cpu_load: int
-        :param memory_load: The memory_load of this Statistic.  # noqa: E501
-        :type memory_load: int
-        :param timestamp: The timestamp of this Statistic.  # noqa: E501
-        :type timestamp: datetime
-        """
-        self.swagger_types = {
-            'id': int,
-            'machine_id': int,
-            'process': int,
-            'cpu_load': int,
-            'memory_load': int,
-            'timestamp': datetime
+    def __repr__(self):
+        return '<id %r, machine_id %r, process %r, cpu_load %r, memory_load %r, timestamp %r>' \
+            % (self.id_, self.machine_id_, self.process_, self.cpu_load_, self.memory_load_, self.timestamp_)
+    
+    def to_dict(self):
+        return {
+            'id' : self.id_,
+            'machine_id' : self.machine_id_,
+            'process' : self.process_,
+            'cpu_load' : self.cpu_load_,
+            'memory_load' : self.memory_load_,
+            'timestamp' : self.timestamp_
         }
-
-        self.attribute_map = {
-            'id': 'id',
-            'machine_id': 'machineId',
-            'process': 'process',
-            'cpu_load': 'cpuLoad',
-            'memory_load': 'memoryLoad',
-            'timestamp': 'timestamp'
-        }
-
-        self._id = id
-        self._machine_id = machine_id
-        self._process = process
-        self._cpu_load = cpu_load
-        self._memory_load = memory_load
-        self._timestamp = timestamp
 
     @classmethod
     def from_dict(cls, dikt) -> 'Statistic':
